--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "bootstrap": "^5.2.1",
     "date-fns": "^2.29.3",
     "date-fns-jalali": "^2.29.3-0",
-    "next": "12.3.0",
+    "dayjs": "^1.11.5",
+    "next": "^12.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-credit-card-input": "^1.1.5",
